'new Double' -> 'Double.valueOf'